--- a/riskscanner/docker-compose-core.yml
+++ b/riskscanner/docker-compose-core.yml
@@ -2,7 +2,7 @@ version: '2.1'
 services:
 
   riskscanner:
-    image: ${RS_PREFIX}/riskscanner:riskscanner
+    image: ${RS_PREFIX}/riskscanner:master
     container_name: riskscanner
     ports:
       - ${RS_PORT}:8088
