--- a/riskscanner/install.conf
+++ b/riskscanner/install.conf
@@ -2,7 +2,8 @@
 ## 安装目录
 RS_BASE=/opt
 ## 镜像 prefix
-RS_PREFIX=registry.cn-qingdao.aliyuncs.com/x-lab/riskscanner
+#RS_PREFIX=registry.cn-qingdao.aliyuncs.com/x-lab/riskscanner
+RS_PREFIX=registry.fit2cloud.com/riskscanner/riskscanner
 ## riskscanner tag
 RS_TAG=1.0.0
 ## Service 端口
