fix(install): 修改阿里云镜像仓库地址

--- a/riskscanner/install.conf
+++ b/riskscanner/install.conf
@@ -2,8 +2,7 @@
 ## 安装目录
 RS_BASE=/opt
 ## 镜像 prefix
-#RS_PREFIX=registry.cn-qingdao.aliyuncs.com/x-lab/riskscanner
-RS_PREFIX=registry.fit2cloud.com/riskscanner/riskscanner
+RS_PREFIX=registry.cn-qingdao.aliyuncs.com/x-lab
 ## riskscanner tag
 RS_TAG=1.0.0
 ## Service 端口
