--- a/compose/docker-compose-app.yml
+++ b/compose/docker-compose-app.yml
@@ -19,3 +19,5 @@ services:
     volumes:
       - ${VOLUME_DIR}/conf:/opt/riskscanner/conf
       - ${VOLUME_DIR}/logs:/opt/riskscanner/logs
+    networks:
+      - net
