--- a/compose/docker-compose-mysql.yml
+++ b/compose/docker-compose-mysql.yml
@@ -26,4 +26,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
-      start_period: 20s
+      start_period: 10s
+    networks:
+      - net
