fix: 修复数据库初始化报错

--- a/compose/docker-compose-app.yml
+++ b/compose/docker-compose-app.yml
@@ -19,3 +19,9 @@ services:
     volumes:
       - ${VOLUME_DIR}/conf:/opt/riskscanner/conf
       - ${VOLUME_DIR}/logs:/opt/riskscanner/logs
+    healthcheck:
+      test: "curl -fsL http://localhost:8088 > /dev/null"
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 90s
