--- a/compose/docker-compose-mysql.yml
+++ b/compose/docker-compose-mysql.yml
@@ -1,6 +1,11 @@
 version: '2.4'
 
 services:
+  riskscanner:
+    depends_on:
+      mysql:
+        condition: service_healthy
+        
   mysql:
     image: x-lab/mysql:5.7.31
     container_name: rs_mysql
